--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <title>Aleksander - GitHub Pages</title>
+<audio id="myAudio">
+  <source src="PSUKlikk.wav" type="audio/wav">
+  Your browser does not support the audio element.
+</audio>
