--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<title>Aleksander - GitHub Pages</title>
-<audio id="myAudio">
-  <source src="PSUKlikk.wav" type="audio/wav">
-  Your browser does not support the audio element.
-</audio>
-<button onclick="playAudio()" type="button">Play Audio</button>
-<button onclick="pauseAudio()" type="button">Pause Audio</button>
-<script>
-var x = document.getElementById("myAudio"); 
-
-function playAudio() { 
-  x.play(); 
-} 
-
-function pauseAudio() { 
-  x.pause(); 
-} 
-</script>
+<a href="/crypto/index.html">Crypto Currency website</a>
