Added some more testing files to the Crypto website

--- a/crypto/index.html
+++ b/crypto/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krypto Valutaer</title>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 </head>
 <body>
 
+    <navbar>
+        <navheader>
+            <span class="iconify nav-header-icon header-closed" data-inline="false" data-icon="bx:bx-menu"></span>
+            <span class="iconify nav-header-icon header-open" data-inline="false" data-icon="bx:bx-arrow-back"></span>
+        </navheader>
+        <navitems>
+            <div class="nav-item">
+                <span class="iconify nav-item-icon" data-inline="false" data-icon="bx:bx-info-circle"></span>
+                <div class="nav-item-text">Kryptovaluta</div>
+            </div>
+            <div class="nav-item">
+                <span class="iconify" data-inline="false" data-icon="bx:bx-bitcoin"></span>
+                <div class="nav-item-text">Bitcoin</div>
+            </div>
+            <div class="nav-item">
+                <span class="iconify nav-item-icon" data-inline="false" data-icon="mdi:ethereum"></span>
+                <div class="nav-item-text">Ethereum</div>
+            </div>
+            <div class="nav-item">
+                <span class="iconify nav-item-icon" data-inline="false" data-icon="mdi:litecoin"></span>
+                <div class="nav-item-text">Litecoin</div>
+            </div>
+            <div class="nav-item">
+                <span class="iconify nav-item-icon" data-inline="false" data-icon="cryptocurrency:xrp"></span>
+    
+                <div class="nav-item-text">XRP</div>
+            </div>
+        </navitems>
+        
+    </navbar>
 
-    <script src="index.js" defer type="module"></script>
+    <content>
+
+    </content>
+
+    <script src="script/index.js" defer type="module"></script>
 </body>
 </html>
