--- a/crypto/ethereum.html
+++ b/crypto/ethereum.html
@@ -54,7 +54,7 @@
             <!-- Lager en link som man kan trykke på -->
             <!-- classen ( nav-item-active ) viser at dette er siden som du er på nå -->
             <!-- classen ( nav-item ) sier at dette elementet er en navigasjons element for css-en -->
-            <a class="nav-item nav-item-active" alt="Kryptovaluta">
+            <a class="nav-item" href="index.html" alt="Kryptovaluta">
                 <!--
                     Gir linken et ikon som viser hvilken krypto valuta du kommer til når du
                     trykker på den
@@ -71,7 +71,7 @@
                 <div class="nav-item-text">Bitcoin</div>
             </a>
             
-            <a class="nav-item" href="ethereum.html" alt="Ethereum">
+            <a class="nav-item nav-item-active" alt="Ethereum">
                 <img class="nav-item-icon" src="asset/img/icons/ethereum.svg" alt="Ethereum" />
                 <div class="nav-item-text">Ethereum</div>
             </a>
@@ -93,7 +93,7 @@
     <div id="content">
         
         <div id="content-header" style="background-image:url('./asset/img/cryptocurrency.jpg'); background-position: right 50% bottom 50%;">
-            <div class="header-text"><div>Kryptovaluta</div></div>
+            <div class="header-text"><div>Ethereum</div></div>
         </div>
     </div>
 
