Done: crypto site

--- a/crypto/bitcoin.html
+++ b/crypto/bitcoin.html
@@ -93,8 +93,38 @@
     <!-- div med id=content for å representere innholdet på siden -->
     <div id="content">
         
-        <div id="content-header" style="background-image:url('./asset/img/cryptocurrency.jpg'); background-position: right 50% bottom 50%;">
+        <div id="content-header" style="background-image:url('./asset/img/bitcoin_banner.jpg'); background-position: right 50% bottom 50%;">
             <div class="header-text"><div>Bitcoin</div></div>
+        </div>
+
+
+        <div class="split-half">
+            <div class="info-card">
+                <div class="card-title">Hva er Bitcoin?</div>
+                <div class="card-content">
+                    Bitcoin ble lagd i 2008 av Satoshi Nakamoto, for å være en desentralisert alternativ til online transaksjoner. Bitcoin ligger ute som Open-Source, og fungerer med en peer-to-peer netverksforbindelse. Dette vil si at hver enkelt person snakker med hverandre i bitcoin netverket. Bitcoin var det først programvaret som tok i bruk blockchains som en type database og mange kaller også bitcoin for moren til alle kryptovalutaer ettersom at den var en av de første og mest suksessfulle.
+                </div>
+            </div>
+            <div>
+                <div id="single-crypto-card">
+                    <div class="card-title">Bitcoin markedsverdi</div>
+                    <div class="card-content">
+                        <div class="value">165 564 kr</div>
+                        <div class="change">
+                            <div class="change-percent up">+ 27,85%</div>
+                            <div class="change-value up">+ 36 067 kr</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="single-crypto-card">
+                    <div class="card-title">Bitcoin markedsverdi for 30 dager siden</div>
+                    <div class="card-content">
+                        <div class="value">129 497 kr</div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
