--- a/crypto/ethereum.html
+++ b/crypto/ethereum.html
@@ -92,8 +92,37 @@
     <!-- div med id=content for å representere innholdet på siden -->
     <div id="content">
         
-        <div id="content-header" style="background-image:url('./asset/img/cryptocurrency.jpg'); background-position: right 50% bottom 50%;">
+        <div id="content-header" style="background-image:url('./asset/img/ethereum_banner.jpg'); background-position: right 50% bottom 50%;">
             <div class="header-text"><div>Ethereum</div></div>
+        </div>
+
+        <div class="split-half">
+            <div class="info-card">
+                <div class="card-title">Hva er Ethereum?</div>
+                <div class="card-content">
+                    Ethereum ble lagd i 2015 av Vitalik Buterin og Gavin Wood. Vitalik og Gavin ble veldig inspirert av bitcoin og hvordan det desentraliserte netverket fungerte. Etter sin utgivelse i 2015 har Ethereum seilt opp som en utfordrer til bitcoin, den har siden blitt den nest største kryptovalutaen i verden. Det er ikke bare små investorer og crypto-miners som har fanget interessen i Ethereum, Microsoft og IBM har integrert Ethereums data systemer i sinne egne sky løsninger. 
+                </div>
+            </div>
+            <div>
+                <div id="single-crypto-card">
+                    <div class="card-title">Ethereum markedsverdi</div>
+                    <div class="card-content">
+                        <div class="value">5 119 kr</div>
+                        <div class="change">
+                            <div class="change-percent up">+ 34,6%</div>
+                            <div class="change-value up">+ 1 316 kr</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="single-crypto-card">
+                    <div class="card-title">Ethereum markedsverdi for 30 dager siden</div>
+                    <div class="card-content">
+                        <div class="value">3 803 kr</div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
