--- a/crypto/index.html
+++ b/crypto/index.html
@@ -6,7 +6,6 @@
     <title>Krypto Valutaer</title>
     <link rel="stylesheet" href="css/main.css">
 
-
     <!-- Lite script som gjør åpning og lukkign av navigasjons baren mulig -->
     <script>
         // Variabel som lagrer hvilket element som er meny ikonet
@@ -95,6 +94,54 @@
         <div id="content-header" style="background-image:url('./asset/img/cryptocurrency.jpg'); background-position: right 50% bottom 50%;">
             <div class="header-text"><div>Kryptovaluta</div></div>
         </div>
+
+
+        <div class="split-half">
+            <div class="info-card">
+                <div class="card-title">Hva er kryptovalutaer?</div>
+                <div class="card-content">
+                    Kryptovalutaer er en digitalisert valuta, som kan brukes i transaksjoner mellom personer og som et betalingsmiddel. Kryptovalutaer bruker kryptografi for å holde transaksjonene trygge og anonyme. Når en transaksjon blir gjennomført blir den kryptert og lagt inn i en databaser som kalles for Blockchains (Blokkjede). Kryptovalutaer bruker også en desentralisert kontroll som er ulikt vanlig valutaer som bruker er sentralisert system, blockchain systemet var nædvendig for at den desentraliserte kontrollen skulle fungere. Bitcoin er den mest kjente kryptovalutaen i verden. 
+                </div>
+            </div>
+
+            <div class="info-card">
+                <div class="card-title">Det kriminelle bruksområdet?</div>
+                <div class="card-content">
+                    Kryptovalutaer har alltid vært sikkert og  anonymt, dette har gjort kryptovalutaer til den perfekte betalingsmetoden for kriminelle og de som ikke ønskes å spores opp. Alle transaksjonene på det svarte markede bruker kryptovalutaer for å hjemme avsender og mottaker. 12.mai 2017 brøt ransomewaret «WannaCry» ut i verden, dette viruset krypterte filer og personlig informasjon til offeret og krevde en 500-600 dollar donasjon via bitcoin.
+                </div>
+            </div>
+        </div>
+
+
+        <div id="multi-crypto-card">
+            <div class="card-title">Noen kjente valutaer</div>
+
+            <div class="card-content">
+                <div id="bitcoin" class="currency_elem">
+                    <img class="coin_icon" src="./asset/img/icons/bitcoin_black.svg" />
+                    <div class="name">Bitcoin</div>
+                    <div class="value up">165 564,00 kr</div>
+                </div>
+                <div id="ethereum" class="currency_elem">
+                    <img class="coin_icon" src="./asset/img/icons/ethereum_black.svg" />
+                    <div class="name">Ethereum</div>
+                    <div class="value up">5 119,00 kr</div>
+                </div>
+                <div id="litecoin" class="currency_elem">
+                    <img class="coin_icon" src="./asset/img/icons/litecoin_black.svg" />
+                    <div class="name">Litecoin</div>
+                    <div class="value up">717,00 kr</div>
+                </div>
+                <div id="xrp" class="currency_elem">
+                    <img class="coin_icon" src="./asset/img/icons/xrp_black.svg" />
+                    <div class="name">XRP</div>
+                    <div class="value up">5,19 kr</div>
+                </div>
+            </div>
+        </div>
+        
+
+
     </div>
 
 </body>
