--- a/crypto/litecoin.html
+++ b/crypto/litecoin.html
@@ -92,8 +92,37 @@
     <!-- div med id=content for å representere innholdet på siden -->
     <div id="content">
         
-        <div id="content-header" style="background-image:url('./asset/img/cryptocurrency.jpg'); background-position: right 50% bottom 50%;">
+        <div id="content-header" style="background-image:url('./asset/img/litecoin_banner.jpg'); background-position: right 50% bottom 50%;">
             <div class="header-text"><div>Litecoin</div></div>
+        </div>
+
+        <div class="split-half">
+            <div class="info-card">
+                <div class="card-title">Hva er Litecoin?</div>
+                <div class="card-content">
+                    Litecoin ble lagd i 2011 av en tidligre Google ansatt med navnet Charles Lee. Som Ethereum var Litecoin veldig inspirert av Bitcoin, og har siden 2011 hatt et mål om å bli bedre enn Bitcoin. Koden var først gitt ut på Charles sin github side og var først en utvidelse av Bitcoin-Qt kienten. Litencoin er den 5.største kryptovalutaen etter markedsverdi og i 2017 var markedsverdien på 17.5 milliarder dollar
+                </div>
+            </div>
+            <div>
+                <div id="single-crypto-card">
+                    <div class="card-title">Litecoin markedsverdi</div>
+                    <div class="card-content">
+                        <div class="value">717 kr</div>
+                        <div class="change">
+                            <div class="change-percent up">+ 39,49%</div>
+                            <div class="change-value up">+ 203 kr</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="single-crypto-card">
+                    <div class="card-title">Litecoin markedsverdi for 30 dager siden</div>
+                    <div class="card-content">
+                        <div class="value">514 kr</div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
