--- a/crypto/xrp.html
+++ b/crypto/xrp.html
@@ -92,8 +92,37 @@
     <!-- div med id=content for å representere innholdet på siden -->
     <div id="content">
         
-        <div id="content-header" style="background-image:url('./asset/img/cryptocurrency.jpg'); background-position: right 50% bottom 50%;">
-            <div class="header-text"><div>XRP</div></div>
+        <div id="content-header" style="background-image:url('./asset/img/xrp_banner.jpg'); background-position: right 50% bottom 50%;">
+            <div class="header-text"><div>XRP( Ripple )</div></div>
+        </div>
+
+        <div class="split-half">
+            <div class="info-card">
+                <div class="card-title">Hva er XRP?</div>
+                <div class="card-content">
+                    XRP også kjent som Ripple ble lagd i 2012 av Ripple Labs. Inc. Denne kryptovalutaen er ikke som alle de andre valutane, fordi de ikke bruker et desentralisert blockchain system. Ripple labs valgt heller å ha en sentralisert database med alle XRP kontoene, og bruker et «ledger» system med en man-in-the-middle som håndterer transaksjonene. Ripple sin verdi er kanskje lav, men de har fått mye oppmerksomhet i det siste.
+                </div>
+            </div>
+            <div>
+                <div id="single-crypto-card">
+                    <div class="card-title">XRP markedsverdi</div>
+                    <div class="card-content">
+                        <div class="value">5,19 kr</div>
+                        <div class="change">
+                            <div class="change-percent up">+ 239,17%</div>
+                            <div class="change-value up">+ 3,02 kr</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="single-crypto-card">
+                    <div class="card-title">XRP markedsverdi for 30 dager siden</div>
+                    <div class="card-content">
+                        <div class="value">2,17 kr</div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
